change text on the main page

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero-content">
-                                <h1>Creative & Minimal<span>It Agency.</span></h1>
-                                <p>Curabitur sed facilisis erat. Vestibulum pharetra eros eget fringilla porttitor. ol Duis a orci nunc. Suspendisse ac convallis sapien, quis commodo libero. Donec nec dui luctus, pellentesque lacus sed, mollis leo.</p>
+                                <h1>Intellectero<span>Developing FinTech, DeFi, NFT, and Blockchain Projects</span></h1>
+                                <p>Get the ready-made project on a turnkey basis. Develop your idea with Intellectero from scratch. Enjoy quality and unique products.</p>
                                 <div class="buttons">
                                     <div class="cmn-btn">
                                         <div class="line-1"></div>
@@ -135,7 +135,7 @@
                                     <div class="cmn-btn layout-two">
                                         <div class="line-1"></div>
                                         <div class="line-2"></div>
-                                        <a href="project.html">See Project</a>
+                                        <a href="project.html">Portfolio</a>
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +154,9 @@
                     <div class="sec-title">
                         <span>Our Solutions</span>
                         <h2>Services</h2>
-                        <p>We provide a full stack development services of blockchain projects</p>
+                        <b>Discover our Offering and Find a Solution</b>
+                        <p>Intellectero provides a full-stack development of FinTech products. Our goal is to implement clients’ ideas, provide them with quality products, and help them to enter the web. Create your own cryptocurrency, token, wallet, exchange, or dApp with us!
+                        </p>
                     </div>
                 </div>
                 <div class="swiper services-slider">
@@ -165,8 +167,8 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/service-icon-3.png" alt="">
                                 </div>
-                                <h4>Software Development</h4>
-                                <p>We create reliable and safe Smart Contracts, including Tokens, Oracle integration and Dapps</p>
+                                <h4>Blockchain Development</h4>
+                                <p>Creation of Blockchain Turnkey Project. The blockchain, developed by Intellectero, is secure and anonymous, complying with all industry standards.</p>
                                 <div class="read-btn">
                                     <a href="service-details.html">Read More</a>
                                 </div>
@@ -178,8 +180,21 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/service-icon-1.png" alt="">
                                 </div>
-                                <h4>Setting up high-load server infrastructure</h4>
-                                <p>We will help you design a high-load & big data architecture for your project</p>
+                                <h4>NFT Collections Launch</h4>
+                                <p>Enter the crypto world with your own NFT collection! Intellectero will help to develop and launch your NFTs using unique smart contracts, remarkable design, and leading technologies.</p>
+                                <div class="read-btn">
+                                    <a href="service-details.html">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide wow animate fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                            <div class="single-service">
+                                <span>02</span>
+                                <div class="icon">
+                                    <img src="assets/img/icons/service-icon-1.png" alt="">
+                                </div>
+                                <h4>Big Data Solutions</h4>
+                                <p>Can’t deal with a huge amount of data? Intellectero will help you to manage the processes with ease and pleasure! Get high-load infrastructure solutions for your project.</p>
                                 <div class="read-btn">
                                     <a href="service-details.html">Read More</a>
                                 </div>
@@ -191,8 +206,8 @@
                                 <div class="icon">
                                     <img src="assets/img/icons/service-icon-2.png" alt="">
                                 </div>
-                                <h4>UI/UX Design</h4>
-                                <p>We can also create for you convenient and attractive mobile apps for Android and iOS.</p>
+                                <h4>FinTech Solutions</h4>
+                                <p>Enter the web with Intellectero to provide your clients with innovative services and gain more customers. We will provide you with technological financial solutions for the automation and transformation of your project.</p>
                                 <div class="read-btn">
                                     <a href="service-details.html">Read More</a>
                                 </div>
@@ -213,12 +228,18 @@
                 <div class="row">
                     <div class="col-lg-6 or-2 wow animate fadeIn" data-wow-delay="200ms" data-wow-duration="1500ms">
                         <div class="sec-title layout2">
-                            <span>Get To Know</span>
+                            <span>Acquaintance</span>
                             <h2>About Us</h2>
                         </div>
                         <div class="about-left">
-                            <h3>We do design, code & develop Software finally launch.</h3>
-                            <p>Integer purus odio, placerat nec rhoncus in, ullamcorper nec dolor. Class onlin aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos only himenaeos. Praesent nec neque at dolor venenatis consectetur eu quis ex. the Donec lacinia placerat felis non aliquam.</p>
+                            <h3>Meet with Intellectero, a FinTech, DeFi, NFT,
+                                and Blockchain Development Company
+                            </h3>
+                            <p>Intellectero is a full-stack development company that operates in FinTech, DeFi, NFT, and Blockchain industries. Our main benefit is an ability to <b>develop projects from a scratch on a turnkey basis:</b> we can implement your idea into real life and provide you will a completely finished product that is ready for use.
+
+                                Intellectero was initially established in Great Britain. 2 years later, the company moved to Turkey. Here we gathered the best specialists, and now our <b>team consists of more than 50 members,</b> among which are skilled software developers, project managers, designers, and others. Each member of the Intellectero team has 10+ years of experience, a huge portfolio, and strong hard skills. Our professionals have successfully worked with Smart Donation Coin, Zeus Group, QSoft, Otto Group, BitOnyx Labs Limited, and other well-known projects.</p>
+                            </br>
+                            <b>Intellectero is your development solution!</b>
                             <div class="company-since">
                                 <div class="company-logo">
                                     <img src="assets/img/logo-dark.png" alt="">
@@ -253,9 +274,9 @@
             <div class="container">
                 <div class="title-wrap  wow animate fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="sec-title white">
-                        <span>Care Study</span>
-                        <h2>Features</h2>
-                        <p>Curabitur sed facilisis erat. Vestibulum pharetra eros eget fringilla porttitor. on Duis a orci nunc. Suspendisse ac convallis sapien, quis commodo libero.</p>
+                        <span>Benefits</span>
+                        <h2>Achievements in Numbers</h2>
+                        <p>Intellectero is a highly experienced company with a staff of professionals, and our success is proven by numbers.</p>
                     </div>
                 </div>
                 <div class="row g-4">
@@ -266,7 +287,7 @@
                                     <img src="assets/img/icons/feature-icon-1.png" alt="">
                                 </div>
                                 <span class="counter">150</span><sup>+</sup>
-                                <h4>Project Completed</h4>
+                                <h4>Completed Projects</h4>
                             </div>
                         </div>
                     </div>
@@ -277,7 +298,7 @@
                                     <img src="assets/img/icons/feature-icon-2.png" alt="">
                                 </div>
                                 <span class="counter">250</span><sup>+</sup>
-                                <h4>Satisfied Clients</h4>
+                                <h4>Satisfied Customers</h4>
                             </div>
                         </div>
                     </div>
@@ -288,7 +309,7 @@
                                     <img src="assets/img/icons/feature-icon-3.png" alt="">
                                 </div>
                                 <span class="counter">50</span><sup>+</sup>
-                                <h4>Expert Teams</h4>
+                                <h4>Team Members</h4>
                             </div>
                         </div>
                     </div>
@@ -299,7 +320,7 @@
                                     <img src="assets/img/icons/feature-icon-4.png" alt="">
                                 </div>
                                 <span class="counter">28</span><sup>+</sup>
-                                <h4>Win Awards</h4>
+                                <h4>Awards and Gratuities</h4>
                             </div>
                         </div>
                     </div>
@@ -313,9 +334,9 @@
             <div class="container">
                 <div class="title-wrap">
                     <div class="sec-title">
-                        <span>Case Study</span>
-                        <h2>Project</h2>
-                        <p>Curabitur sed facilisis erat. Vestibulum pharetra eros eget fringilla porttitor. on Duis a orci nunc. Suspendisse ac convallis sapien, quis commodo libero.</p>
+                        <span>Our Cases</span>
+                        <h2>Portfolio</h2>
+                        <p>Explore our cases and projects we have worked with. Among our clients are famous companies, eminent projects, and start-ups.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -413,8 +434,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3">
                         <div class="sec-title white layout2">
-                            <span>Satisfied Client</span>
-                            <h2>Our Partner</h2>
+                            <span>Our Clients</span>
+                            <h2>Intellectero has worked with</h2>
                             <div class="-partnerslider-navigator">
                                 <div class="swiper-button-prev-c"><i class="bi bi-chevron-left"></i></div>
                                 <div class="swiper-button-next-c"><i class="bi bi-chevron-right"></i></div>
@@ -466,7 +487,7 @@
                     <div class="sec-title">
                         <span>Our Team</span>
                         <h2>Meet Our Team</h2>
-                        <p>Curabitur sed facilisis erat. Vestibulum pharetra eros eget fringilla porttitor. on Duis a orci nunc. Suspendisse ac convallis sapien, quis commodo libero.</p>
+                        <p>Intellectero has united the most skilled and experienced specialists to provide you with quality and useful services.</p>
                     </div>
                 </div>
                 <div class="swiper team-slider">
